--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,18 @@
 
-flask
-flask-cors
-pandas
-scikit-learn
-joblib
-openpyxl
-python-pptx
-matplotlib
-sqlalchemy
-psycopg2-binary
-gunicorn
-pillow
+flask==3.0.0
+flask-cors==4.0.0
+
+pandas==2.2.1
+scikit-learn==1.4.0
+joblib==1.3.2
+
+openpyxl==3.1.2
+python-pptx==0.6.21
+
+matplotlib==3.8.2
+pillow==10.2.0
+
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+
+gunicorn==21.2.0
