--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,21 @@
 
 name: Train Model
-
 on:
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    concurrency:
+      group: train-model-${{ github.ref }}
+      cancel-in-progress: false
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repo (full history)
+        uses: actions/checkout@v4
+        with:
+            fetch-depth: 0            # ⚠️ pour rebase/pull corrects
+            persist-credentials: true # utilise GITHUB_TOKEN
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -21,16 +26,27 @@ jobs:
         run: |
           pip install -r backend/requirements.txt
 
-      - name: Train model
+      - name: Train model from CSV
         run: |
-          cd backend
-          python train_model.py
+          python backend/train_model.py
 
-      - name: Commit generated model files
+      - name: Commit & push generated model files (with rebase)
+        env:
+          BRANCH: ${{ github.ref_name }}
         run: |
-          cd backend
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add model.pkl vectorizer.pkl || true
-          git commit -m "Add trained model via GitHub Actions" || true
-          git push
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          # Stage
+          git add backend/model.pkl backend/vectorizer.pkl || true
+
+          # S'il n'y a rien à committer, ne pas échouer
+          git diff --cached --quiet && echo "Nothing to commit" && exit 0
+
+          git commit -m "Add trained model via GitHub Actions"
+
+          # Rebase sur la dernière version distante
+          git pull --rebase origin "$BRANCH"
+
+          # Push sécurisé (évite écraser si qqn a poussé entre-temps)
+          git push --follow-tags
